--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 1vmin);
   color: white;
+}
+
+.main {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .App-link {
